--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["es6", "dom"],
     "module": "esnext",
     "rootDir": "src",
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "lib",
     "esModuleInterop": true,
