--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "@decoy9697/a-star": "^0.2.3",
+    "@decoy9697/vector": "^1.0.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^7.29.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "rollup": "^2.51.0",
