Tidy up for deployment

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "version": "1.0.0",
   "main": "dist/bundle.js",
   "author": "craigdallimore <decoy9697@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "rollup-plugin-uglify": "^6.0.4"
+  }
 }
